cluster-local/deeppharmgraph/datastore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dpg-datastore-primary
  namespace: deeppharmgraph
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oxigraph-primary
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 7878
