cluster-local/deeppharmgraph/datastore/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-datastore
  namespace: deeppharmgraph
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  hostnames: [dpg-datastore.dev.lan.shamrock.systems]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dpg-datastore-primary
          port: 80
